--- a/index.html
+++ b/index.html
@@ -27,26 +27,26 @@
       <td valign="top">
       <img src="images/mm1-1-2.png" width="361" heigth="345">
       <h4>Capítulo 1: Vuelo a Twelville</h4>
-      &nbsp;&nbsp;&nbsp;1.1. <a style="color:white" href="chapters/mm1-1-1.pdf" target="_blank">Embarcando</a></br>
-      &nbsp;&nbsp;&nbsp;1.2. <a style="color:white" href="chapters/mm1-1-2.pdf" target="_blank">Un pasajero muy peludo</a></br>
-      &nbsp;&nbsp;&nbsp;1.3. <a style="color:white" href="chapters/mm1-1-3.pdf" target="_blank">Carrera entre aviones</a>
+      &nbsp;&nbsp;&nbsp;1.1. <a style="color:white" href="chapters/mm1-1-1es.pdf" target="_blank">Embarcando</a></br>
+      &nbsp;&nbsp;&nbsp;1.2. <a style="color:white" href="chapters/mm1-1-2es.pdf" target="_blank">Un pasajero muy peludo</a></br>
+      &nbsp;&nbsp;&nbsp;1.3. <a style="color:white" href="chapters/mm1-1-3es.pdf" target="_blank">Carrera entre aviones</a>
       <p>&nbsp;&nbsp;&nbsp;(Unidad 1: Cifras y números)</p>
       </td>
       <td valign="top">
     <img src="images/mm1-2-2.png" width="361" heigth="345">
     <h4>Capítulo 2: La coreografía</h4>
-    &nbsp;&nbsp;&nbsp;2.1. <a style="color:white" href="chapters/mm1-2-1.pdf" target="_blank">Hora del patio</a></br>
-    &nbsp;&nbsp;&nbsp;2.2. <a style="color:white" href="chapters/mm1-2-2.pdf" target="_blank">Reunión clandestina</a></br>
-    &nbsp;&nbsp;&nbsp;2.3. <a style="color:white" href="chapters/mm1-2-3.pdf" target="_blank">Escapar de la fábrica</a>
+    &nbsp;&nbsp;&nbsp;2.1. <a style="color:white" href="chapters/mm1-2-1es.pdf" target="_blank">Hora del patio</a></br>
+    &nbsp;&nbsp;&nbsp;2.2. <a style="color:white" href="chapters/mm1-2-2es.pdf" target="_blank">Reunión clandestina</a></br>
+    &nbsp;&nbsp;&nbsp;2.3. <a style="color:white" href="chapters/mm1-2-3es.pdf" target="_blank">Escapar de la fábrica</a>
       <p>&nbsp;&nbsp;&nbsp;(Unidad 2: Divisibilidad)</p>
         </font>
       </td>
       <td valign="top">
     <img src="images/mm1-3-1.png" width="361" heigth="345">
     <h4>Capítulo 3: Cumpleaños feliz</h4>
-    &nbsp;&nbsp;&nbsp;3.1. <a style="color:white" href="chapters/mm1-3-1.pdf" target="_blank">Empieza la fiesta</a></br>
-    &nbsp;&nbsp;&nbsp;3.2. <a style="color:white" href="chapters/mm1-3-2.pdf" target="_blank">La tienda nueva</a></br>
-    &nbsp;&nbsp;&nbsp;3.3. <a style="color:white" href="chapters/mm1-3-3.pdf" target="_blank">La primera cita</a>
+    &nbsp;&nbsp;&nbsp;3.1. <a style="color:white" href="chapters/mm1-3-1es.pdf" target="_blank">Empieza la fiesta</a></br>
+    &nbsp;&nbsp;&nbsp;3.2. <a style="color:white" href="chapters/mm1-3-2es.pdf" target="_blank">La tienda nueva</a></br>
+    &nbsp;&nbsp;&nbsp;3.3. <a style="color:white" href="chapters/mm1-3-3es.pdf" target="_blank">La primera cita</a>
       <p>&nbsp;&nbsp;&nbsp;(Unidad 3: Definición de </br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;fracciones)</p>
       </td>
       </tr>
